# Bjorken_RTA_2

./: Bjorken_RTA_2.sln
Extra/: hydroTheories.cpp  hydroTheories.h  sitrep.aux  sitrep.tex
Extra/Boltzmann_equation_solver_w_RTA_and_Bjorken_sym-master/: Makefile  README.md  RTA_BLBE  RTA_BLBE.cxx  plot_output.plt
Extra/CUDA_Code/: rta-cuda.tgz
Extra/CUDA_Code/RTA_CUDA/: RTA_CUDA.sln
Extra/CUDA_Code/rta-cuda/: Makefile  README.txt
Extra/Derek_Code/integrate_gubser_RTA-master/: README.md  integrate_gubser_RTA
Extra/Derek_Code/integrate_gubser_RTA-master/Gubser/: CMakeLists.txt  clean_make.sh  find_Gubser_soln.ipynb
Extra/Derek_Code/integrate_gubser_RTA-master/Gubser/src/: CMakeLists.txt  FileIO.cpp  Parameter.h  coord_functions.cpp  integrate_gubser_RTA.cpp  soln_functions.cpp
Extra/rta_resum-master/: README.md
Extra/rta_resum-master/VS_Version/: VS_Version.sln
Extra/rta_resum-master/generator_expansion/: Generator example in paper.nb  Generator expansion n = 10.nb  Generator expansion n = 20.nb  Generator expansion n = 30.nb  Generator expansion n = 40.nb  recursion relation.nb
Extra/rta_resum-master/rta/: hypergeometric functions.nb  hypergeometric.cpp  rta.cpp
Extra/rta_resum-master/standard_df/: Standard df corrections.nb
Project1/: Algo.cpp  Algo.h  Bjorken_RTA.cpp  Bjorken_RTA.h  ErrorMessages.h  Project1.vcxproj  Project1.vcxproj.filters  enegyDensity_output.txt  main.cpp  params.txt  tput_moment_.out
Project1/output/: plot_outputs.plt
Python_Version/: Untitled.ipynb
Python_Version/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
(+32 files in other folders)
